# CMakeExample

./: .gitignore  .gitmodules  CMakeLists.txt
apps/: CMakeLists.txt  main.cpp
include/: Application.hpp  Log.h  Window.hpp
include/renderer/: Core.hpp  Renderer.hpp  RendererBase.hpp
scripts/: build_and_run.sh  compileShaders.sh
src/: Application.cpp  CMakeLists.txt  Window.cpp
src/renderer/: Core.cpp  Renderer.cpp  RendererBase.cpp
